Feature(002): - Million basic project structure implemented. - Million tests project basic structure implemented. - Gitignore files added.

--- a/Million.Api/appsettings.json
+++ b/Million.Api/appsettings.json
@@ -1,4 +1,8 @@
 {
+  "MongoDbSettings": {
+    "ConnectionString": "mongodb://localhost:27017",
+    "DatabaseName": "million_db"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
